--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,21 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "module": "es6",
-    "moduleResolution": "node",
-    "strict": true,
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "removeComments": true,
-    "forceConsistentCasingInFileNames": true,
     "rootDir": "./src/",
     "outDir": "./dist/lib",
-    "declarationDir": "./dist/types",
     "sourceMap": true,
     "declaration": true,
-    "newLine": "LF"
+    "declarationDir": "./dist/types",
+    "strict": true,
+    "removeComments": true,
+    "target": "es2016",
+    "module": "esnext",
+    "moduleResolution": "node"
   },
   "include": [
-    "src"
-  ]
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ],
 }
